--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
     color: rgb(31, 38, 240);
 }
 
-section{
+.chamada{
     background: rgb(45, 0, 128);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -23,4 +23,16 @@ section{
 
 .chamada-texto{
 margin-right: 5%;
+}
+img{
+    height: 200px;
+}
+.categoria-videos{
+     display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+.categoria{
+    padding-left: 20px;
+    padding-left: 20px;
 }
