--- a/style.css
+++ b/style.css
@@ -25,8 +25,12 @@ header {
     margin-right: 5%;
 }
 
-img {
-    height: 200px;
+h1{
+    font-size: 40px;
+
+}
+p{
+    font-size: 20px;
 }
 
 .categoria-videos {
@@ -38,4 +42,18 @@ img {
 .categoria {
     padding-left: 20px;
     padding-right: 20px;
+     margin-top:50px;
 }
+.cotegoria-videos img{
+    opacity: 0.5;
+     height: 200px;
+}
+.categoria-videos img:hover{
+    opacity: 1.0;
+    border: 1px solid red;
+}
+
+.categoria h2{
+    color: rgb(36, 248, 7);
+}
+
