--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background: rgb(206, 222, 230);
     margin: 0px;
     font-family: "Archivo Black", sans-serif;
-
+    margin-bottom: 100px;
 }
 
 header {
@@ -44,7 +44,7 @@ p{
     padding-right: 20px;
      margin-top:50px;
 }
-.cotegoria-videos img{
+.categoria-videos img{
     opacity: 0.5;
      height: 200px;
 }
